--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'books' from 'cfg' (/home/f3nr1r/wfa-book-of-mormon/python/cfg.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-8c88844e5db5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msearch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfind_valid_refs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_all_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfind_unique_words\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mget_data\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_raw_verses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcfg\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjesus_aliases\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgospel_steps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mWord\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'books' from 'cfg' (/home/f3nr1r/wfa-book-of-mormon/python/cfg.py)"
+     ]
+    }
+   ],
    "source": [
     "from pprint import pprint\n",
     "\n",
@@ -14,19 +26,74 @@
     "from Reference import make_references, Word_Count\n",
     "from search import find_valid_refs, get_all_words, find_unique_words \n",
     "from get_data import get_raw_verses, get_data\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from cfg import jesus_aliases, gospel_steps, books\n",
+    "\n",
     "class Word:\n",
-    "    def __init__(self, text='', count=int(0)):\n",
+    "    def __init__(self, text='', count=int(0), references = []):\n",
     "        self.text = text\n",
-    "        self.count = count"
+    "        self.count = count\n",
+    "        self.references = []\n",
+    "        \n",
+    "def find_word_count(w_objs, pattern):\n",
+    "    found = False\n",
+    "    for W in w_objs: \n",
+    "        if W.text != pattern:\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(W.text, W.count)\n",
+    "            return W\n",
+    "\n",
+    "def find_word_and_count(w_sorted, pattern, pattern_list):\n",
+    "    texts  = []\n",
+    "    counts = []\n",
+    "\n",
+    "    for pattern in pattern_list:\n",
+    "        W = find_word_count(w_sorted, pattern)\n",
+    "        if W != False:\n",
+    "            texts.append(W.text)\n",
+    "            counts.append(W.count)\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
+    "    return [texts, counts]\n",
+    "\n",
+    "def make_objs():\n",
+    "    fname = '../json/book-of-mormon.json'\n",
+    "    xfname = '../json/book-of-mormon-flat.json'\n",
+    "    raw = get_data(xfname)\n",
+    "    data = get_raw_verses(raw)\n",
+    "    Refs = make_references(data)\n",
+    "    #raw_all_words = get_all_words(Refs)\n",
+    "    raw_all_words = []\n",
+    "    \n",
+    "    for Ref in Refs:\n",
+    "        for word in Ref.text:\n",
+    "            raw_all_words.append(word)\n",
+    "\n",
+    "    raw_all_words.sort()\n",
+    "\n",
+    "    unique_words = []\n",
+    "\n",
+    "    for word in tqdm(raw_all_words):\n",
+    "        if word in unique_words: continue\n",
+    "        else: unique_words.append(word)\n",
+    "    word_objs = []\n",
+    "    \n",
+    "    for word in tqdm(unique_words):\n",
+    "        W = Word(text=word)\n",
+    "        for _word in raw_all_words:\n",
+    "            if _word != W.text:\n",
+    "                continue\n",
+    "            else:\n",
+    "                W.count += 1\n",
+    "        word_objs.append(W)\n",
+    "    return word_objs\n",
+    "\n",
+    "fname = '../json/book-of-mormon.json'\n",
+    "xfname = '../json/book-of-mormon-flat.json'\n",
+    "raw = get_data(xfname)\n",
+    "data = get_raw_verses(raw)\n",
+    "Refs = make_references(data)"
    ]
   },
   {
@@ -34,129 +101,69 @@
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fname = '../json/book-of-mormon.json'\n",
-    "xfname = '../json/book-of-mormon-flat.json'\n",
-    "raw = get_data(xfname)\n",
-    "data = get_raw_verses(raw)\n",
-    "Refs = make_references(data)\n",
-    "#raw_all_words = get_all_words(Refs)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_all_words = []\n",
-    "for Ref in Refs:\n",
-    "    for word in Ref.text:\n",
-    "        raw_all_words.append(word)\n",
-    "raw_all_words.sort()\n",
-    "print(len(raw_all_words))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 17%|█▋        | 44832/266938 [00:00<00:01, 209434.83it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "266938\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 266938/266938 [00:17<00:00, 15112.00it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "unique_words = []\n",
-    "for word in tqdm(raw_all_words):\n",
-    "    if word in unique_words: continue\n",
-    "    else: unique_words.append(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 478/5976 [00:21<04:02, 22.65it/s]"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-a68402f54975>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0m_word\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mraw_all_words\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_word\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "word_objs = []\n",
-    "for word in tqdm(unique_words):\n",
-    "    W = Word(text=word)\n",
-    "    for _word in raw_all_words:\n",
-    "        if _word != W.text:\n",
-    "            continue\n",
-    "        else:\n",
-    "            W.count += 1\n",
-    "    word_objs.append(W)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save('./word-objs.npy', word_objs)\n",
-    "word_objs = load('./word-objs.npy')\n",
+    "word_objs = load('./word-objs.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "w_sorted = sorted(word_objs, key = lambda w: w.count, reverse=True)\n",
+    "with open('top-100-words.csv', 'w+') as f:\n",
+    "    for w in w_sorted[:99]:\n",
+    "        txt = w.text + ',' + str(w.count) + '\\n'\n",
+    "        #print(txt)\n",
+    "        f.write(txt)\n",
     "#save('./w_sorted.npy', w_sorted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_word_count(w_objs, pattern):\n",
-    "    found = False\n",
-    "    for W in w_objs: \n",
-    "        if W.text == pattern:\n",
-    "            print(W.text, W.count)\n",
-    "            return W\n",
-    "    return found"
+    "# find top 300, will manually take out conjunctions and other common workds\n",
+    "w_sorted = sorted(word_objs, key = lambda w: w.count, reverse=True)\n",
+    "with open('top-300-words.csv', 'w+') as f:\n",
+    "    for w in w_sorted[:299]:\n",
+    "        txt = w.text + ',' + str(w.count) + '\\n'\n",
+    "        #print(txt)\n",
+    "        f.write(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-36-6feab7d65471>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-6feab7d65471>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    W = find_word_count(w_sorted, pattern)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -201,10 +208,10 @@
     }
    ],
    "source": [
-    "from cfg import jesus_aliases\n",
     "christ_names = []\n",
     "christ_counts = []\n",
-    "for alias in jesus_aliases:\n",
+    "def find_word_and_count(w_sorted, pattern, pattern_list):\n",
+    "    for alias in jesus_aliases:\n",
     "    W = find_word_count(w_sorted, alias)\n",
     "    if W != False:\n",
     "        christ_names.append(W.text)\n",
@@ -213,23 +220,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.tools as tls\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BarContainer object of 34 artists>"
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "plt.bar(christ_names, christ_counts)"
+    "bubble_mpl = plt.figure()\n",
+    "gs_text= []\n",
+    "gs_counts = []\n",
+    "for step in gospel_steps:\n",
+    "    W = find_word_count(w_sorted, step)\n",
+    "    if W != False:\n",
+    "        christ_names.append(W.text)\n",
+    "        christ_counts.append(W.count)\n",
+    "x = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = bom_books\n",
+    "\n",
+    "y = 0"
    ]
   },
   {
@@ -261,34 +296,80 @@
     }
    ],
    "source": [
+    "plt.bar(christ_names, christ_counts)\n",
     "plt.bar(christ_names, christ_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mosiah 27:34\n",
+      "Mosiah 29:2\n",
+      "Mosiah 29:3\n",
+      "Mosiah 29:3\n",
+      "Alma 8:13\n",
+      "Alma 20:2\n",
+      "Alma 21:1\n",
+      "Alma 21:4\n",
+      "Alma 21:5\n",
+      "Alma 21:7\n",
+      "Alma 21:9\n",
+      "Alma 21:13\n",
+      "Alma 22:1\n",
+      "Alma 22:4\n",
+      "Alma 22:7\n",
+      "Alma 22:8\n",
+      "Alma 22:10\n",
+      "Alma 22:12\n",
+      "Alma 22:13\n",
+      "Alma 22:14\n",
+      "Alma 22:15\n",
+      "Alma 22:16\n",
+      "Alma 22:17\n",
+      "Alma 22:18\n",
+      "Alma 22:19\n",
+      "Alma 22:20\n",
+      "Alma 22:21\n",
+      "Alma 22:22\n",
+      "Alma 22:24\n",
+      "Alma 22:25\n",
+      "Alma 22:26\n",
+      "Alma 22:35\n",
+      "Alma 23:1\n",
+      "Alma 23:4\n",
+      "Alma 23:16\n",
+      "Alma 25:6\n",
+      "Alma 25:17\n",
+      "Alma 26:10\n",
+      "Alma 27:19\n",
+      "Alma 27:25\n",
+      "Alma 31:6\n",
+      "Alma 31:32\n",
+      "Alma 50:14\n",
+      "Alma 50:14\n",
+      "Mormon 2:9\n",
+      "Ether 1:15\n",
+      "Ether 1:16\n",
+      "Ether 10:31\n",
+      "Ether 10:31\n",
+      "Moroni 9:17\n",
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#v_refs = find_valid_refs(Refs,'aaron')\n",
-    "#for ref in v_refs:\n",
-    "#    print(ref.reference)\n",
-    "#print(len(v_refs))\n",
-    "#Ws = []\n",
-    "#for word in unique_words:\n",
-    "#    Ws.append(Word_Count(word))\n",
-    "#for W in Ws:\n",
-    "#    for x in raw_all_words:\n",
-    "#        if W.word == x:\n",
+    "v_refs = find_valid_refs(Refs,'aaron')\n",
+    "for ref in v_refs:\n",
+    "    print(ref.reference)\n",
+    "print(len(v_refs))\n",
+    "\n",
+    "\n",
     "            "
    ]
   },
@@ -306,7 +387,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ws = []\n",
+    "\n",
+    "for word in unique_words:\n",
+    "    Ws.append(Word_Count(word))\n",
+    "for W in Ws:\n",
+    "    for x in raw_all_words:\n",
+    "        if W.word == x:"
+   ]
   }
  ],
  "metadata": {
