--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "christ_book_references = []\n",
     "christ_alias_with_ref = []\n",
-    "sep = '\\t'\n",
+    "sep = ','\n",
     "for i in christ_aliases:\n",
     "    \n",
     "    v_refs = find_valid_refs(Refs,i.text)\n",
@@ -116,9 +116,9 @@
     "                new_refs.append(book)\n",
     "        #print(i.text,ref.reference)\n",
     "    #print(i.text, sorted(new_refs))\n",
-    "    output = i.text + sep +sep.join(new_refs) + '\\n'\n",
+    "    output = i.text + sep + sep.join(new_refs) + '\\n'\n",
     "    #print(output)\n",
-    "    with open('mentions-of-christ-seperate-count.csv', 'w+') as f:\n",
+    "    with open('./spreadsheets/mentions-of-christ-seperate-count.csv', 'a+') as f:\n",
     "        f.write(output)\n",
     "#print(christ_book_references)\n"
    ]
